[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
eclipse.project.name = appName + '-core'

java.sourceCompatibility = 21
java.targetCompatibility = 21
if (JavaVersion.current().isJava9Compatible()) {
  compileJava.options.release.set(21)
}
dependencies {
  api "com.badlogicgames.gdx:gdx:$gdxVersion"
  api "net.onedaybeard.artemis:artemis-odb:$artemisOdbVersion"
  api "com.badlogicgames.gdx:gdx-box2d:$gdx_box2d_Version"
  api "com.badlogicgames.gdx:gdx-box2d-utils:$gdx_box2d_Version"
  api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
  api "com.kotcrab.vis:vis-ui:$visUiVersion"
  implementation "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
  if (enableGraalNative == 'true') {
    implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
  }
  testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.1"
  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.1"
  testImplementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdx_box2d_Version:natives-desktop"
}
test {
  useJUnitPlatform()
}


